# PamView

./: .gitignore  CMakeLists.txt  README.md
frontend/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  pamview_window.cpp  pamview_window.h  sliderdialog.cpp  sliderdialog.h  zoomablecanvas.cpp  zoomablecanvas.h
