cmake_minimum_required(VERSION 3.10)
project(pamview VERSION 1.0.0 LANGUAGES C CXX)
option(ENABLE_QT_FRONTEND "Include a Qt frontend" ON)
add_subdirectory(library)
if (ENABLE_QT_FRONTEND)
    add_subdirectory(frontend)
    add_executable(pamview ALIAS pamview_qt)
else()
    add_executable(pamview ALIAS pamview_library)
endif()